--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blunt-livereload",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Simple livereload server. 20 linesOfCode on server and 2  LoC on client :fire:",
   "main": "dist/server.js",
   "repository": {
@@ -18,7 +18,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "fastify": "^3.3.0",
+    "fastify": "^3.15.1",
+    "fastify-static": "^4.0.1",
     "fastify-websocket": "^2.0.7"
   },
   "devDependencies": {
@@ -31,6 +32,6 @@
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
     "webpack": "^4.44.1",
-    "webpack-nano": "^1.0.0"
+    "webpack-cli": "^4.7.0"
   }
 }
