--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
-node_modules/
-dist/
-*.log
+# dependencies
+/node_modules
+
+# production
+/dist
+
+# debug
+npm-debug.log*
+
+# typescript
+*.tsbuildinfo
+*.css.d.ts
