--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "blunt-livereload",
   "type": "module",
   "version": "1.0.0",
-  "description": "Simple livereload server. 20 linesOfCode on server and 2  LoC on client :fire:",
+  "description": "Simple livereload server",
   "main": "dist/index.js",
   "repository": {
     "type": "git",
@@ -29,9 +29,9 @@
     "@babel/preset-typescript": "^7.21.0",
     "@types/node": "^18.14.6",
     "babel-loader": "^9.1.2",
-    "del": "^7.0.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
+    "typescript": "^4.9.5",
     "wait-on": "^7.0.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
